# quick-start-connectors

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  test_adbs_connector.py
.github/: PULL_REQUEST_TEMPLATE.md
.trunk/: trunk.yaml
_template_/: .env-template  README.md  pyproject.toml
_template_/provider/: __init__.py  app.py  client.py  provider.py
_template_fastapi_/: .env-template  README.md  pyproject.toml
_template_fastapi_/provider/: app.py  client.py  config.py  datamodels.py  exceptions.py  provider.py
agilitycms/: .env-template  README.md  pyproject.toml
agilitycms/provider/: app.py  client.py  provider.py
agora/: .env-template  README.md  pyproject.toml
aha/: .env-template  README.md  pyproject.toml
algolia/: .env-template  README.md  pyproject.toml
algolia/provider/: __init__.py  provider.py
asana/: .env-template  README.md  pyproject.toml
atera/: .env-template  README.md  pyproject.toml
backstage/: .env-template  README.md  pyproject.toml
backstage/provider/: __init__.py  app.py  provider.py
basecamp/: README.md  pyproject.toml
bigquery/: .env-template  README.md  credentials.json-template  pyproject.toml
blogger/: .env-template  README.md  pyproject.toml
box/: .env-template  README.md  pyproject.toml
carbon/: .env-template  README.md  pyproject.toml
cockroach/: .env-template  README.md  pyproject.toml
coda/: .env-template  README.md  pyproject.toml
confluence/: .env-template  README.md  pyproject.toml
confluence/dev/: load_data.py
confluence/provider/: app.py  client.py  provider.py
contentful/: .env-template  README.md  pyproject.toml
copper/: .env-template  README.md  pyproject.toml
copper/provider/: app.py  client.py  provider.py
couchbase/: .env-template  README.md  pyproject.toml
couchbase/provider/: __init__.py  app.py  client.py  provider.py
courier/: .env-template  README.md  pyproject.toml
crunchbase/: .env-template  README.md  pyproject.toml
discourse/: .env-template  README.md  pyproject.toml
docusign/: .env-template  README.md  pyproject.toml
dropbox/: .env-template  README.md  pyproject.toml
dropbox/provider/: app.py  client.py  provider.py  unstructured.py
egnyte/: .env-template  README.md  pyproject.toml
elastic/: .env-template  README.md  docker-compose.yml  pyproject.toml
elastic/dev/: elasticsearch.yml
elastic/provider/: app.py  client.py  provider.py
fifteenfive/: .env-template  README.md  pyproject.toml
fireflies/: .env-template  README.md  pyproject.toml
freshdesk/: .env-template  README.md  pyproject.toml
freshsales/: .env-template  README.md  pyproject.toml
freshservice/: .env-template  README.md  pyproject.toml
gcalendar/: .env-template  README.md  credentials.json-template  pyproject.toml
gcalendar/provider/: __init__.py  app.py  client.py  provider.py
gdrive/: .env-template  README.md  pyproject.toml
github/: .env-template  README.md  pyproject.toml
gitlab/: .env-template  README.md  pyproject.toml
gmail/: .env-template  README.md  pyproject.toml
guru/: .env-template  README.md  pyproject.toml
hackernews/: .env-template  README.md  pyproject.toml
hackernews/provider/: app.py  client.py  provider.py
hackernews/tests/: conftest.py  test_api.py  test_provider.py
helpscout/: .env-template  README.md  pyproject.toml
hubspot/: .env-template  README.md  pyproject.toml
hubspot/provider/: app.py  provider.py
intercom/: .env-template  README.md  pyproject.toml
intercom/provider/: __init__.py  provider.py
jenkins/: .env-template  README.md  pyproject.toml
jenkins/dev/: Dockerfile
jenkins/dev/jenkins-data/: README
jenkins/dev/jenkins-docker-certs/: README
jenkins/provider/: app.py  provider.py
jira/: .env-template  README.md  config.py  pyproject.toml
kendra/: .env-template  README.md  pyproject.toml
klaviyo/: .env-template  (+2 more)
medium/: .env-template  README.md  pyproject.toml
medium/provider/: app.py  client.py  provider.py
milvus/: .env-template  README.md  docker-compose.yml  pyproject.toml
milvus/dev/: generate_embeddings.py  load_data.py
milvus/provider/: __init__.py  app.py  client.py  provider.py
msteams/: .env-template  README.md  pyproject.toml
msteams/provider/: app.py  client.py  provider.py  unstructured.py
mysql/: .env-template  README.md  bbq.sql  docker-compose.yml  pyproject.toml
mysql/provider/: app.py  provider.py
opensearch/: .env-template  README.md  docker-compose.yml  pyproject.toml
opensearch/dev/: opensearch.yml
opensearch/provider/: app.py  client.py  provider.py
oracleadb/: .env-template  .gitignore  README.md  docker-compose.yml  pyproject.toml  test_adbs_connector.py
oracleadb/provider/: __init__.py  app.py  client.py  provider.py
outlook/: .env-template  README.md  pyproject.toml
outlook/provider/: __init__.py  app.py  client.py  provider.py
pinecone/: .env-template  README.md  pyproject.toml
pinecone/dev/: generate_embeddings.py  load_data.py
pinecone/provider/: __init__.py  app.py  client.py  provider.py
postgres/: .env-template  README.md  docker-compose.yml  pyproject.toml
postgres/dev/: load_data.py
postgres/provider/: provider.py
redis/: .env-template  README.md  docker-compose.yml  pyproject.toml
redis/dev/: load_data.py
redis/provider/: __init__.py  app.py  client.py  provider.py
redis/redis-data/: README
redis/tests/: conftest.py  test_api.py  test_auth.py  test_provider.py
sharepoint/: .env-template  README.md  pyproject.toml
sharepoint/provider/: __init__.py  app.py  client.py  consts.py  enums.py  provider.py  unstructured.py
slack/: .env-template  README.md  pyproject.toml
slack/provider/: app.py  client.py  provider.py
snowflake/: .env-template  README.md  pyproject.toml
snowflake/provider/: app.py  client.py  provider.py
techcrunch/: .env-template  README.md  pyproject.toml
techcrunch/provider/: __init__.py  app.py  client.py  provider.py
vectara/: .env-template  README.md  pyproject.toml
vectara/provider/: __init__.py  app.py  provider.py
(+263 files in other folders)
