[tool.poetry]
name = "couchbase"
version = "0.1.0"
description = "Connects Cohere to Couchbase"
authors = ["Eugene P<eugene@lightsonsoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.5"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
requests = "^2.31.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
couchbase = "^4.1.8"



[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"


[tool.poetry.group.development.dependencies]
black = "^23.7.0"
types-colorama = "^0.4.15.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
