[tool.poetry]
name = "dropbox-connector"
version = "0.1.0"
description = "Search provider for connecting Cohere with Dropbox."
authors = ["Scott Mountenay <scott@lightsonsoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.5"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
python-dotenv = "^1.0.0"
dropbox = "^11.36.2"
requests = "^2.31.0"
gunicorn = "^21.2.0"
aiohttp = "^3.9.2"


[tool.poetry.group.development.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
