[tool.poetry]
name = "elastic"
version = "0.1.0"
description = ""
authors = ["Alex W <alex@lightsonsoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = "^8.8.0"
flask = "2.2.5"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
gunicorn = "^22.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
