[tool.poetry]
name = "connectors-jenkins"
version = "0.1.0"
description = ""
authors = ["Eugene P<eugene@lightsonsoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.5"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
gunicorn = "^22.0.0"
python-dotenv = "^1.0.0"
python-jenkins = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
