[tool.poetry]
name = "msteams-search-connector"
version = "0.1.0"
description = "Microsoft Teams Search Connector"
authors = ["Eugene P <eugene@lightsonsoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.5"
python-dotenv = "1.0.0"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
msal = "^1.25.0"
gunicorn = "^21.2.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
unstructured-client = "^0.14.3"
aiohttp = "^3.9.2"
asyncio = "^3.4.3"




[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
