[tool.poetry]
name = "mysql"
version = "0.1.0"
description = ""
authors = ["Alex W <alex@lightsonsoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.5"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
gunicorn = "^20.1.0"
black = "^24.3.0"
python-dotenv = "^1.0.0"
mysql-connector-python = "8.0.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
