[tool.poetry]
name = "oracleadb"
version = "0.1.0"
description = ""
authors = ["fsuchak <fenil.suchak@oracle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.5"
connexion = { extras = ["swagger-ui"], version = "^2.14.2" }
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
black = "^23.11.0"
oracledb = "^1.4.2"
nltk = "^3.8.1"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
