[tool.poetry]
name = "outlook"
version = "0.1.0"
description = "Microsoft Outlook Search Connector"
authors = ["Scott Mountenay <scott@lightsonsoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.5"
python-dotenv = "1.0.0"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
msal = "^1.25.0"
gunicorn = "^22.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"




[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
