[tool.poetry]
name = "slack-connector"
version = "0.1.0"
description = "Connects Cohere with Slack."
authors = ["Alex W <alex@lightsonsoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.5"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
python-dotenv = "^1.0.0"
slack-sdk = "^3.21.3"
gunicorn = "^21.2.0"


[tool.poetry.group.development.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
