[tool.poetry]
name = "snowflake"
version = "0.1.0"
description = "Connects Cohere to Snowflake"
authors = ["Scott Mountenay <scott@lightsonsoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
connexion = {version = "^2.14.2", extras = ["swagger-ui"]}
python-dotenv = "^1.0.0"
flask = {version = "2.2.5", extras = ["swagger-ui"]}
requests = "^2.31.0"
snowflake-connector-python = "^3.1.0"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.4.1"


[tool.poetry.group.development.dependencies]
black = "^24.3.0"
types-colorama = "^0.4.15.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
